# ginkgo

./: .gitlab-ci.yml  CMakeLists.txt  README.md
.github/workflows/: linux.yml
benchmark/solver/: solver.cpp
benchmark/utils/: general.hpp  overhead_linop.hpp
cmake/: autodetect_executors.cmake  autodetect_library_dependencies.cmake  create_test.cmake
common/components/: atomic.hpp.inc  reduction.hpp.inc  sqrt_array.hpp.inc  zero_array.hpp.inc
common/matrix/: csr_kernels.hpp.inc  dense_kernels.hpp.inc  diagonal_kernels.hpp.inc  sellp_kernels.hpp.inc
common/solver/: gmres_mixed_kernels.hpp.inc
core/: CMakeLists.txt
core/base/: array.cpp  executor.cpp  index_set.cpp
core/components/: sqrt_array.hpp
core/device_hooks/: CMakeLists.txt  common_kernels.inc.cpp  cuda_hooks.cpp  hip_hooks.cpp  mpi_hooks.cpp
core/devices/: CMakeLists.txt
core/devices/cuda/: executor.cpp
core/devices/hip/: executor.cpp
core/devices/mpi/: executor.cpp
core/devices/omp/: executor.cpp
core/factorization/: lu.cpp  lu_kernels.hpp
core/matrix/: coo.cpp  csr.cpp  csr_kernels.hpp  dense.cpp  dense_kernels.hpp  diagonal.cpp  sellp.cpp
core/multigrid/: amgx_pgm.cpp  amgx_pgm_kernels.hpp
core/solver/: bicg.cpp  bicgstab.cpp  cg.cpp  cgs.cpp  fcg.cpp  gmres.cpp  gmres_mixed.cpp  gmres_mixed_accessor.hpp  multigrid.cpp
core/test/: CMakeLists.txt  (+1 more)
cuda/: CMakeLists.txt
examples/: CMakeLists.txt
hip/: CMakeLists.txt
matrices/: CMakeLists.txt
mpi/: CMakeLists.txt
omp/: CMakeLists.txt
reference/: CMakeLists.txt
test_install/: test_install.cpp  test_install_cuda.cu
(+160 files in other folders)
