function(ginkgo_add_object_library name)
    add_library(${name} OBJECT ${ARGN})
    ginkgo_compile_features(${name})
    ginkgo_default_includes(${name})
    target_include_directories(${name} PUBLIC ${Ginkgo_SOURCE_DIR})
    if (GINKGO_HAVE_MPI)
        target_include_directories(${name} SYSTEM PRIVATE ${MPI_INCLUDE_PATH})
    endif()
    set_target_properties(${name} PROPERTIES POSITION_INDEPENDENT_CODE ON)
endfunction()

add_subdirectory(omp)
add_subdirectory(cuda)
add_subdirectory(mpi)
add_subdirectory(hip)
add_subdirectory(reference)
